--- a/pro2/style.css
+++ b/pro2/style.css
@@ -5,27 +5,32 @@ h1 {
 	font-size: 40px;
 	color: white;
 	text-align: center;
-	line-height: 140px;
+	line-height: 10px;
 }
 #description{
 	text-align: center;
 	color: white;
 
 }
-.title-box {
-	background-color: blue;
+.title-deco{
+	height: 0px;
 	width: 80%;
-	justify-content: center;
-	border: 10px solid aqua;
-	border-radius: 15px;
+	border-bottom: 7px solid black;
+	background-color: pink;
+}
+.title-box {
+	padding: 0px px 0px;
+	border-bottom: 10px black solid;
+	height: 60px ;
 
 }
 #title-container{
 	height: 200px;
 	display: flex;
 	background-color: transparent;
-	justify-content: center;
+	justify-content: right;
 }
+@media (max-width 900px
 #personal-container{
 	background-color:transparent;
 	display: flex;
@@ -43,8 +48,8 @@ h1 {
 
 }
 #labels{
-
+		
 }
 body{
-	background-image: url(error.png);
+	background-color: #30302f;
 }
