--- a/pro2/style2.css
+++ b/pro2/style2.css
@@ -4,3 +4,13 @@
 	flex-wrap: wrap;
 	align-items: center;
 }
+.flex-outer > li > label,
+.flex-outer li p {
+	flex: 1 0 120px;
+	max-width: 220px;
+}
+
+.flex-outer > li > label + *,
+.flex-inner {
+	flex: 1 0 220px;
+}
