--- a/pro2/style3.css
+++ b/pro2/style3.css
@@ -1,17 +1,61 @@
+body{
+	background-image: url(bg.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-attachment: fixed;
+	font-family: "helvetica";
+}
+h1{
+	font-size: 58px;
+	color:white;
+	text-shadow: 2px 2px rgba(0, 0, 0, 0.8); 
+	padding: 0px 0px 0px 0px;
+
+}
+.title-deco{
+	border-bottom: 50px black;
+	height: 1px;
+	width: 75%;
+}
+.title-helper{
+	width: 100px;
+	height: 100px;
+	background-color: pink;
+}
+.inner{
+	background-color: rgba(72, 92, 179, 1);
+	height: 300px;
+	width: 75%;
+	border-radius: 25px;
+	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4); 
+
+
+}
 .outer{
-	background-color: grey;
-	height: 700px;
+	background-color: rgba(167, 147, 118, 0.66);
+	height: 2700px;
 	width: 85%;
 	margin:auto;
 	display: flex;
-	justify-content: center;
+	justify-content: space-around;
 	flex-wrap: nowrap;
 	flex-direction: column;
+	align-items: center;
 }
-@media (min-width: 650px){
+.inner-message{
+	background-color: rgba(72, 92, 179, 1);
+	height: 500px;
+	width: 75%;
+	border-radius: 25px;
+	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4); 
+}
+@media screen and (orientation: landscape){
 .outer{
-	background-color: grey;
-	height: 700px;
+	background-color: rgba(167, 147, 118, 0.66);
+	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4); 
+	border-radius: 25px;
+	height: 2000px;
 	width: 85%;
 	margin:auto;
 	display: flex;
@@ -19,14 +63,21 @@
 	flex-wrap: wrap;
 	flex-direction: row;
 }
+	.inner{
+		background-color: rgba(72, 92, 179, 1);
+		border-radius: 25px;
+		box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4); 
+		height: 300px;
+		width: 35%;
+	}
+h1{
+	font-size: 58px;
+	color:rgba(79, 102, 199, 1);
+	text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.6); 
+	padding: 0px 0px 0px 240px;
+}
 }
 
-.inner{
-	background-color: dodgerblue;
-	height: 300px;
-	width: 35%;
-
-}
 .notes{
 	display:flex;
 	flex-direction: column;
