--- a/pro2/style3.css
+++ b/pro2/style3.css
@@ -1,4 +1,4 @@
-#name-label, #email-label, #number-label, #dropdown-label, #dropdown2-label, #dropdown3-label {
+#name-label, #email-label, #number-label, #dropdown-label, #dropdown2-label, #dropdown3-label, #checkbox-label{
 	display: block;
 	align-self: flex-start;	
 	font-family: helvetica;
@@ -6,7 +6,7 @@
 	color: white;
 	padding: 10px;
 }
-#comment-label{
+#comment-label, #radio-button-label {
 	display: block;
 	align-self: center;	
 	font-family: helvetica;
@@ -42,7 +42,7 @@
 	align-self: flex-start;
 }
 
-.names{
+.flex-column{
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
@@ -57,7 +57,7 @@
 .radio-outer{
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
+	justify-content: space-around;
 }
 .radio-inner{
 	display: block;
@@ -65,6 +65,12 @@
 }
 .radio-label{
 	width: 100%;
+}
+#description{
+	font-size: 25px;
+	font-family: "helvetica";
+	margin-left: 15%;
+	color: white; 
 }
 
 body{
@@ -77,15 +83,17 @@ body{
 }
 h1{
 	font-size: 58px;
-	color:white;
+	color:rgb(72, 92, 179);
 	text-shadow: 2px 2px rgba(0, 0, 0, 0.8); 
 	padding: 0px 0px 0px 0px;
+	height: 60px;
+	margin: 8px;
 
 }
 .title-deco{
-	border-bottom: 50px black;
+	border-top: 5px rgb(72, 92, 179) solid;
 	height: 1px;
-	width: 75%;
+	width: 85%;
 }
 .title-helper{
 	width: 100px;
@@ -98,8 +106,6 @@ h1{
 	width: 75%;
 	border-radius: 25px;
 	box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4); 
-
-
 }
 .outer{
 	background-color: rgba(167, 147, 118, 0.66);
@@ -124,6 +130,12 @@ h1{
 	align-items: center;
 }
 @media screen and (orientation: landscape){
+#description{
+	font-size: 25px;
+	font-family: "helvetica";
+	margin-left: 15%;
+	color: rgb(72, 92, 179); 
+}
 .outer{
 	background-color: rgba(167, 147, 118, 0.66);
 	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4); 
@@ -136,13 +148,13 @@ h1{
 	flex-wrap: wrap;
 	flex-direction: row;
 }
-	.inner{
+.inner{
 		background-color: rgba(72, 92, 179, 1);
 		border-radius: 25px;
 		box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.4); 
 		height: 300px;
 		width: 35%;
-	}
+}
 h1{
 	font-size: 58px;
 	color:rgba(79, 102, 199, 1);
@@ -154,4 +166,15 @@ h1{
 .notes{
 	display:flex;
 	flex-direction: column;
+}
+#submit{
+	border: 0;
+	background: none;
+	box-shadow: none;
+	border-radius: 5px;
+	background-color:rgb(204, 145, 8);
+	height: 30px;
+	font-family: helvetica;
+	font-size: 20px;
+	color: white;
 }
