--- a/pro1/style.css
+++ b/pro1/style.css
@@ -4,3 +4,23 @@ body{
 	max-width: auto;
 	background-size: cover;
 }
+.title-flex{
+	height: 250px;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: no-wrap;
+}
+.flip{
+	transform: scaleX(-1);
+}
+.curtain{
+	display: block;
+}
+.portrait{
+	display: block;
+}
+#img-div{
+	width:50%;
+	margin:0;
+}
