--- a/pro1/style.css
+++ b/pro1/style.css
@@ -3,9 +3,26 @@ body{
 	min-height: 100%;
 	max-width: auto;
 	background-size: cover;
+	margin: 0;
+}
+.title-flex-top{
+	height: 300px;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: no-wrap;
+	justify-content: space-between;
+}
+.title-flex-2{
+	height: 600px;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	flex-wrap: no-wrap;
+	justify-content: space-between;
 }
 .title-flex{
-	height: 250px;
+	height: 300px;
 	width: 100%;
 	display: flex;
 	flex-direction: row;
@@ -16,6 +33,7 @@ body{
 }
 .curtain{
 	display: block;
+	flex-basis: content;
 }
 .portrait{
 	display: block;
@@ -23,4 +41,16 @@ body{
 #img-div{
 	width:50%;
 	margin:0;
+}
+#tribute-info{
+	font-family:"helvetica";
+	display:block;
+}
+.tribute-flex{
+	display:flex;
+	height: 300px;
+	width: 100%;
+}
+.deco{
+	display: block;
 }
