--- a/pro1/style2.css
+++ b/pro1/style2.css
@@ -32,7 +32,7 @@ h1{
 }
 .content-grid{
 	display: grid;
-	grid-template-columns: 86px 1fr 86px;
+	grid-template-columns: 32px 1fr 32px;
 }
 .help{
 	border: dashed purple 3px;
@@ -45,4 +45,15 @@ h1{
 		background-color: yellow;	
 	}
 
+}
+.fill-width {
+	min-height: 100%;
+	width: auto;
+}
+.content-column{
+	display: flex;
+	flex-direction: column;
+}
+.divider{
+	display: block;
 }
