--- a/pro3/style.css
+++ b/pro3/style.css
@@ -12,15 +12,15 @@ p{
 	top: 0;
 	right: 0;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
-	height: 200px;
+	height: 450px;
 	background-color: pink;
 	width: 100%
 
 }
-.menu-div{
+.menu-item{
 	display: block;
 }
 .form-div{
