--- a/pro3/style.css
+++ b/pro3/style.css
@@ -60,6 +60,13 @@ p{
 .filler-div{
 	height: 110px;
 }
+.about-text{
+	font-size: 15px;
+}
+.about-div{
+	display: flex;
+	grid-template-columns: 1fr 1fr 1fr;
+}
 @media (min-width: 655px){
 	.header-flex{
 		flex-direction: row;	
