--- a/pro3/style.css
+++ b/pro3/style.css
@@ -15,7 +15,7 @@
 	display: none !important;
 }
 .visible-mobile{
-	display: inline !important;	
+	display: inline !important ;	
 }
 
 body{
@@ -73,7 +73,13 @@ p{
 		height: 110px;
 	}
 }
-@media (min-width: 1200px){
+@media (min-width: 1100px){
+
+	body{
+		margin: 0;
+		background-color: purple;
+	}
+
 	.visible-desktop{
 		display: inline !important;
 	}
