--- a/pro3/style.css
+++ b/pro3/style.css
@@ -1,3 +1,6 @@
+.bullet{
+}
+
 .submit-button{
 	display: block;
 	border: 0;
@@ -60,12 +63,38 @@ p{
 .filler-div{
 	height: 110px;
 }
+.about-filler{
+	display: block;
+	background-color: beige;
+	height: 110px;
+	width: 20%;
+}
 .about-text{
 	font-size: 15px;
+	display: block;
+	margin: 0;
+}
+.about-title{
+	margin: 0;
+	font-size: 20px;
+	display: block;
 }
 .about-div{
+	border: black 1px solid;
 	display: flex;
-	grid-template-columns: 1fr 1fr 1fr;
+	grid-template-columns: 1fr 100px 1fr 1fr;
+}
+.about-text-box{
+	justify-content: center;
+	height: 110px;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+}
+.about-text-box-header{
+	display: block;
+	height: 30px;
+	background-color: hotpink;
 }
 @media (min-width: 655px){
 	.header-flex{
@@ -73,7 +102,7 @@ p{
 		height: 110px;
 	}
 }
-@media (min-width: 1100px){
+@media (min-width: 1220px){
 
 	body{
 		margin: 0;
@@ -88,5 +117,22 @@ p{
 	}
 	.header-flex{
 		flex-direction: row;	
+	}
+}
+@media (max-width: 825px){
+	.bullet{
+		display: none;	
+	}
+	.about-div{
+		display: flex;
+		grid-template-columns: 1fr 1fr 1fr;
+	}
+	.about-filler{
+		display: none;
+	}
+	.about-text-box{
+		height: auto;
+		display:block;
+		overflow: auto;
 	}
 }
