--- a/pro3/style.css
+++ b/pro3/style.css
@@ -1,3 +1,26 @@
+.video-div{
+	display: flex;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
+}
+.video{
+	display: block;
+}
+
+.pricing-grid{
+	display: flex;
+	grid-template-rows: 1fr 1fr 1fr;
+	height: 400px;
+	width: 100%;
+}
+
+.pricing-div{
+	display:flex;
+	flex-direction: column;
+	height: 200px;
+	width: 20%;
+}
 .bullet{
 }
 
