--- a/pro3/style.css
+++ b/pro3/style.css
@@ -3,10 +3,11 @@ h3{
 }
 
 .select-button{
+	border-radius: 5px;
 	border: 0;
 	background: none;
 	box-shadow: none;
-	background-color: #7cc6fe;
+	background-color: #23c9ff;
 	height: 40px;
 	width: 25%;
 }
@@ -45,14 +46,16 @@ h3{
 }
 
 .pricing-div{
-	border: black 2px solid;
+	border: grey 2px solid;
 	display:flex;
 	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
-	height: 450px;
+	height: 525px;
 	width: 30%;
 	min-width: 300px;
+	border-radius: 15px;
+	
 }
 
 .bullet{
@@ -122,7 +125,6 @@ p{
 }
 .about-filler{
 	display: block;
-	background-color: beige;
 	height: 110px;
 	width: 20%;
 }
@@ -138,7 +140,6 @@ p{
 }
 .about-div{
 	margin: 10px;
-	border: black 1px solid;
 	display: flex;
 	grid-template-columns: 1fr 100px 1fr 1fr;
 }
@@ -164,7 +165,6 @@ p{
 
 	body{
 		margin: 0;
-		background-color: purple;
 	}
 
 	.visible-desktop{
@@ -205,6 +205,13 @@ p{
 	}
 	.pricing-div{
 		min-width: 300px;	
-		height: 350px;
+		height: 375px;
+	}
+}
+@media (max-width: 1200px)
+{
+	.pricing-div{
+		min-width: 300px;
+		height: 375px;	
 	}
 }
