--- a/pro3/style.css
+++ b/pro3/style.css
@@ -1,8 +1,11 @@
 h3{
 	text-align: center;
+	font-family: 'Comfortaa', cursive;
 }
 
 .select-button{
+	font-family: 'Comfortaa', cursive;
+	font-size: 15px;
 	border-radius: 5px;
 	border: 0;
 	background: none;
@@ -39,6 +42,7 @@ h3{
 .pricing-grid{
 	display: flex;
 	justify-content: space-around;
+	align-items: center;
 	flex-direction: row;
 	
 	height: 600px;
@@ -59,19 +63,26 @@ h3{
 }
 
 .bullet{
+	display: block;
+	height: 100%;
+	align-self: center;
 }
 
 .submit-button{
+	border-radius: 5px;
+	font-family: 'Comfortaa', cursive;
+	font-size: 20px;
 	display: block;
 	border: 0;
 	background: none;
 	box-shadow: none;
 	background-color: #7cc6fe;
 	height: 40px;
-	width: 25%;
+	width: 20%;
 }
 .input{
-	font-size: 20px;
+	font-family: 'Comfortaa', cursive;
+	font-size: 30px;
 }
 
 .visible-desktop{
@@ -87,13 +98,26 @@ body{
 
 }
 p{
+	font-family: 'Comfortaa', cursive;
 	font-size: 30px;
 	color: black;
 }
 .footer-link{
 	font-size: 20px;
+	font-family: 'Comfortaa', cursive;
 	display: block;
 }
+.footer-link:hover{
+	color:white;
+}
+a{
+	text-decoration: none;
+	color: black;
+}
+a:hover{
+	color:white;
+}
+
 .header-flex{
 	margin: 0;
 	position: fixed;
@@ -109,13 +133,19 @@ p{
 
 }
 .footer-div{
+	font-family: 'Comfortaa', cursive;
 	display: flex;
-	justify-content: space-around;
+	justify-content: flex-end;
+	border-radius: 15px 15px 0px 0px;
 	background-color: #e7bbe3ff;
 	height: 60px;
 	margin: 0px 20px 0px 20px;
 }
 .menu-item{
+	margin: 0;
+	display: block;
+}
+.nav-link{
 	margin: 0;
 	display: block;
 }
@@ -139,6 +169,11 @@ p{
 	height: 110px;
 	width: 20%;
 }
+.about-filler-2{
+	display: block;
+	height: 110px;
+	width: 20px;
+}
 .about-text{
 	font-size: 15px;
 	display: block;
@@ -147,12 +182,13 @@ p{
 .about-title{
 	margin: 0;
 	font-size: 20px;
+	font-family: 'Comfortaa', cursive;
 	display: block;
 }
 .about-div{
 	margin: 10px;
 	display: flex;
-	grid-template-columns: 1fr 100px 1fr 1fr;
+	grid-template-columns: 1fr 110px 20px 1fr 1fr;
 }
 .about-text-box{
 	justify-content: center;
@@ -191,6 +227,7 @@ p{
 @media (max-width: 825px){
 	.bullet{
 		display: none;	
+		margin: 10px;
 	}
 	.about-div{
 		display: flex;
@@ -198,6 +235,9 @@ p{
 	}
 	.about-filler{
 		display: none;
+	}
+	.about-filler-2{
+		display: none;	
 	}
 	.about-text-box{
 		height: auto;
