--- a/pro5/style.css
+++ b/pro5/style.css
@@ -1,11 +1,39 @@
 body{
 	background-color: purple;
+	margin: 0;
 }
 .intro{
 	height: 100vh;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 	background-color: blue;
 }
 .content{
-	height: 200px;
+	height: 300px;
 	background-color: pink;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+.project{
+	display: block;
+	height: 100px;
+	width: 100px;
+	background-color: magenta;
+}
+.nav-bar{
+	height: 200px;
+	background-color: violet;
+	width: 100%;
+	position: fixed;
+}
+h1{
+	display: block;
+}
+.welcome-filler{
+	display: block;
+	width: 100%;
+	height: 33%;
 }
