--- a/pro5/style.css
+++ b/pro5/style.css
@@ -11,16 +11,19 @@ body{
 	background-color: blue;
 }
 .content{
+	border: red solid 2px;
 	height: 300px;
+	width: 600px;
 	background-color: pink;
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	
 }
 .project{
 	display: block;
-	height: 100px;
-	width: 100px;
+	height: 200px;
+	width: 200px;
 	background-color: magenta;
 }
 .nav-bar{
