--- a/pro4/style.css
+++ b/pro4/style.css
@@ -14,7 +14,7 @@ body{
 	display: flex;
 	height: 100%;
 	width: 100%;
-	justify-content: flex-end;
+	justify-content: flex-start;
 }
 .material{
 	flex: 1 1 auto;
