--- a/pro5/style.css
+++ b/pro5/style.css
@@ -18,6 +18,8 @@ body{
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
+	flex-flow: row wrap;
+	position: relative;
 	
 }
 .project-tile{
@@ -25,6 +27,7 @@ body{
 	height: 200px;
 	width: 200px;
 	background-color: magenta;
+	flex-basis: 33%;
 }
 .nav-bar{
 	display: flex;
